Remove venv and large files; add to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -124,4 +124,4 @@ ehthumbs.db
 Thumbs.db
 
 # Project specific
-# Add any project-specific files or folders you want to ignore below
+# Add any project-specific files or folders you want to ignore belowvenv/
